--- a/src/main/resources/view/table.css
+++ b/src/main/resources/view/table.css
@@ -21,3 +21,8 @@
     -fx-background-color: #FFBB38;
     -fx-effect:  dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);}
 
+.scroll-pane .corner{
+    width: 40px;}
+.scroll-bar:vertical .thumb{
+    -fx-background-color: black;}
+
