--- a/src/main/resources/view/StartPage.fxml
+++ b/src/main/resources/view/StartPage.fxml
@@ -114,7 +114,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="CENTER" graphicTextGap="8.0" layoutX="-1.0" layoutY="264.0" mnemonicParsing="false" prefHeight="77.0" prefWidth="214.0" style="-fx-border-color: white; -fx-background-color: white;" text="Монитор отметок" wrapText="true">
+            <Button alignment="CENTER" graphicTextGap="8.0" layoutX="-1.0" layoutY="264.0" mnemonicParsing="false" onAction="#handleButtonAction5" prefHeight="77.0" prefWidth="214.0" style="-fx-border-color: white; -fx-background-color: white;" text="Монитор отметок" wrapText="true">
                <font>
                   <Font name="Calibri" size="18.0" />
                </font>
@@ -164,6 +164,7 @@
             <fx:include fx:id="run_page" maxHeight="-Infinity" maxWidth="-Infinity" source="RunPage.fxml" />
             <fx:include fx:id="protocol_page" maxHeight="-Infinity" maxWidth="-Infinity" source="ProtocolPage.fxml" />
             <fx:include fx:id="relay_run_page" maxHeight="-Infinity" maxWidth="-Infinity" source="RelayRunPage.fxml" />
+            <fx:include fx:id="marks_monitor_page" maxHeight="-Infinity" maxWidth="-Infinity" source="MarksMonitorCompetition.fxml" />
          </children>
       </AnchorPane>
    </children>
