--- a/src/main/resources/view/RunPage.fxml
+++ b/src/main/resources/view/RunPage.fxml
@@ -74,7 +74,7 @@
                   </GridPane>
                </children>
             </GridPane>
-            <TableView fx:id="runTable" prefHeight="419.0" prefWidth="1047.0" style="-fx-border-radius: 12; -fx-background-color: #FAFAFA; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" stylesheets="@table.css" GridPane.rowIndex="1">
+            <TableView fx:id="runTable" prefHeight="419.0" prefWidth="1047.0" style="-fx-border-radius: 12; -fx-background-color: #FAFAFA; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" stylesheets="@css/table.css" GridPane.rowIndex="1">
                <columns>
                   <TableColumn fx:id="lastnameColumn" prefWidth="75.0" text="Фамилия" />
                   <TableColumn fx:id="nameColumn" prefWidth="75.0" text="Имя" />
