--- a/src/main/resources/view/StartPage.fxml
+++ b/src/main/resources/view/StartPage.fxml
@@ -96,7 +96,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="esta" alignment="CENTER" graphicTextGap="8.0" layoutY="190.0" mnemonicParsing="false" onAction="#handleButtonAction4" prefHeight="78.0" prefWidth="214.0" style="-fx-border-color: white; -fx-background-color: white;" text="Эстафета                " wrapText="true">
+            <Button fx:id="esta" alignment="CENTER" graphicTextGap="8.0" layoutY="190.0" mnemonicParsing="false" onAction="#handleButtonAction3" prefHeight="78.0" prefWidth="214.0" style="-fx-border-color: white; -fx-background-color: white;" text="Эстафета                " wrapText="true">
                <font>
                   <Font name="Calibri" size="18.0" />
                </font>
@@ -114,7 +114,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="CENTER" graphicTextGap="8.0" layoutX="-1.0" layoutY="264.0" mnemonicParsing="false" onAction="#handleButtonAction5" prefHeight="77.0" prefWidth="214.0" style="-fx-border-color: white; -fx-background-color: white;" text="Монитор отметок" wrapText="true">
+            <Button alignment="CENTER" graphicTextGap="8.0" layoutX="-1.0" layoutY="264.0" mnemonicParsing="false" onAction="#handleButtonAction4" prefHeight="77.0" prefWidth="214.0" style="-fx-border-color: white; -fx-background-color: white;" text="Монитор отметок" wrapText="true">
                <font>
                   <Font name="Calibri" size="18.0" />
                </font>
@@ -125,6 +125,24 @@
                   <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@images/icons/cctv-camera%20(1).png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Button fx:id="distance" alignment="BASELINE_LEFT" graphicTextGap="8.0" layoutX="-1.0" layoutY="342.0" mnemonicParsing="false" onAction="#handleButtonAction5" prefHeight="78.0" prefWidth="214.0" style="-fx-border-color: white; -fx-background-color: white;" text="Дистанции" wrapText="true">
+               <font>
+                  <Font name="Calibri" size="18.0" />
+               </font>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <graphic>
+                  <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/icons/relay.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -145,6 +163,7 @@
             <fx:include fx:id="competition_page" maxHeight="-Infinity" maxWidth="-Infinity" source="CompetitionPage.fxml" />
             <fx:include fx:id="run_page" maxHeight="-Infinity" maxWidth="-Infinity" source="RunPage.fxml" />
             <fx:include fx:id="relay_run_page" maxHeight="-Infinity" maxWidth="-Infinity" source="RelayRunPage.fxml" />
+            <fx:include fx:id="distance_page" maxHeight="-Infinity" maxWidth="-Infinity" source="DistancePage.fxml" />
             <fx:include fx:id="marks_monitor_page" maxHeight="-Infinity" maxWidth="-Infinity" source="MarksMonitorCompetition.fxml" />
          </children>
       </AnchorPane>
