--- a/src/main/resources/view/ClubPage.fxml
+++ b/src/main/resources/view/ClubPage.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="main_pane" prefHeight="610.0" prefWidth="1068.0" style="-fx-background-color: ECF1FE;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.DistancePageController">
+<AnchorPane fx:id="main_pane" prefHeight="610.0" prefWidth="1068.0" style="-fx-background-color: ECF1FE;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.ClubPageController">
    <children>
       <GridPane layoutX="11.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="610.0" prefWidth="1068.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <columnConstraints>
@@ -36,16 +36,16 @@
                <children>
                   <GridPane prefHeight="34.0" prefWidth="499.0" GridPane.columnIndex="1">
                      <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="256.4000244140625" minWidth="10.0" prefWidth="230.40001220703124" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="408.39996337890625" minWidth="10.0" prefWidth="291.6000244140625" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="408.39996337890625" minWidth="10.0" prefWidth="83.5999755859375" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="256.4000244140625" minWidth="10.0" prefWidth="176.7999755859375" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="408.39996337890625" minWidth="10.0" prefWidth="282.4000244140625" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="408.39996337890625" minWidth="10.0" prefWidth="114.19995117187506" />
                      </columnConstraints>
                      <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
                         <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="274.0" style="-fx-background-color: #FAFAFA; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
-                        <Label prefHeight="26.0" prefWidth="126.0" text="Поиск дистанций:" textFill="#555555" GridPane.halignment="RIGHT">
+                        <Label prefHeight="26.0" prefWidth="92.0" text="Поиск клуба:" textFill="#555555" GridPane.halignment="RIGHT">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -54,38 +54,39 @@
                   </GridPane>
                </children>
             </GridPane>
-            <TableView fx:id="runTable" maxWidth="-Infinity" prefHeight="434.0" prefWidth="905.0" style="-fx-border-radius: 12; -fx-background-color: #FAFAFA; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" stylesheets="@css/table.css" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+            <TableView fx:id="runTable" maxWidth="-Infinity" prefHeight="434.0" style="-fx-border-radius: 12; -fx-background-color: #FAFAFA; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" stylesheets="@css/table.css" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <columns>
                   <TableColumn fx:id="lastnameColumn" prefWidth="57.60000169277191" resizable="false" text="№" />
-                  <TableColumn fx:id="nameColumn" prefWidth="345.6000289916992" resizable="false" text="Название дистанции" />
-                  <TableColumn fx:id="middlenameColumn" prefWidth="97.5999755859375" text="Длина, метров" />
-                  <TableColumn fx:id="genderColumn" prefWidth="66.4000244140625" text="Набор высоты" />
+                  <TableColumn fx:id="nameColumn" prefWidth="268.00007247924805" resizable="false" text="Название" />
+                  <TableColumn fx:id="middlenameColumn" prefWidth="316.7999267578125" text="Тренер(Представитель)" />
+                  <TableColumn fx:id="genderColumn" prefWidth="183.19998779296873" resizable="false" text="Регион" />
                </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
             </TableView>
-            <GridPane alignment="TOP_CENTER" prefWidth="820.0" GridPane.rowIndex="3">
+            <GridPane alignment="TOP_CENTER" prefWidth="820.0" GridPane.rowIndex="2">
                <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="553.0" minWidth="10.0" prefWidth="550.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="553.6000061035156" minWidth="10.0" prefWidth="550.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="553.6000061035156" minWidth="10.0" prefWidth="550.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="553.6000061035156" minWidth="10.0" prefWidth="550.3999938964844" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="553.0" minWidth="10.0" prefWidth="117.99998168945312" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="553.0" minWidth="10.0" prefWidth="224.40001831054684" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="553.6000061035156" minWidth="10.0" prefWidth="223.00004882812493" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="625.1999877929687" minWidth="10.0" prefWidth="250.60006713867188" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="553.6000061035156" minWidth="10.0" prefWidth="247.60001220703123" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #FFBB38; -fx-background-radius: 8px; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" text="Редактировать" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #FFBB38; -fx-background-radius: 8px; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" text="Редактировать" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                      <font>
                         <Font size="14.0" />
                      </font></Button>
-                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #00C781; -fx-background-radius: 8px; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" text="Добавить дистанцию" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #00C781; -fx-background-radius: 8px; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" text="Добавить клуб" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                      <font>
                         <Font size="14.0" />
                      </font></Button>
-                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #FF4040; -fx-background-radius: 8px; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" text="Удалить" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #FF4040; -fx-background-radius: 8px; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" text="Удалить" GridPane.columnIndex="3" GridPane.halignment="LEFT" GridPane.rowIndex="1">
                      <font>
                         <Font size="14.0" />
                      </font>
