--- a/src/main/resources/view/GroupPage.fxml
+++ b/src/main/resources/view/GroupPage.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="main_pane" prefHeight="610.0" prefWidth="1068.0" style="-fx-background-color: ECF1FE;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.ClubPageController">
+<AnchorPane fx:id="main_pane" prefHeight="610.0" prefWidth="1068.0" style="-fx-background-color: ECF1FE;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.GroupPageController">
    <children>
       <GridPane layoutX="11.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="610.0" prefWidth="1068.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <columnConstraints>
@@ -45,7 +45,7 @@
                      </rowConstraints>
                      <children>
                         <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="274.0" style="-fx-background-color: #FAFAFA; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
-                        <Label prefHeight="26.0" prefWidth="102.0" text="Поиск группы:" textFill="#555555" GridPane.halignment="RIGHT">
+                        <Label prefHeight="26.0" prefWidth="92.0" text="Поиск клуба:" textFill="#555555" GridPane.halignment="RIGHT">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -56,11 +56,10 @@
             </GridPane>
             <TableView fx:id="runTable" maxWidth="-Infinity" prefHeight="434.0" style="-fx-border-radius: 12; -fx-background-color: #FAFAFA; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" stylesheets="@css/table.css" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <columns>
-                  <TableColumn prefWidth="57.60000169277191" resizable="false" text="№" />
-                  <TableColumn prefWidth="268.00007247924805" resizable="false" text="Название" />
-                  <TableColumn prefWidth="316.7999267578125" text="Возраст от" />
-                  <TableColumn prefWidth="183.19998779296873" resizable="false" text="Возраст до" />
-                  <TableColumn prefWidth="183.19998779296873" resizable="false" text="Пол" />
+                  <TableColumn fx:id="lastnameColumn" prefWidth="57.60000169277191" resizable="false" text="№" />
+                  <TableColumn fx:id="nameColumn" prefWidth="268.00007247924805" resizable="false" text="Название" />
+                  <TableColumn fx:id="middlenameColumn" prefWidth="316.7999267578125" text="Тренер(Представитель)" />
+                  <TableColumn fx:id="genderColumn" prefWidth="183.19998779296873" resizable="false" text="Регион" />
                </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -68,11 +67,11 @@
             </TableView>
             <GridPane alignment="TOP_CENTER" prefWidth="820.0" GridPane.rowIndex="2">
                <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="553.0" minWidth="10.0" prefWidth="28.199993515014654" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="553.0" minWidth="10.0" prefWidth="209.000048828125" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="553.6000061035156" minWidth="10.0" prefWidth="209.20002441406254" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="625.1999877929687" minWidth="10.0" prefWidth="262.79997558593755" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="553.6000061035156" minWidth="10.0" prefWidth="342.79999999999995" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="553.0" minWidth="10.0" prefWidth="117.99998168945312" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="553.0" minWidth="10.0" prefWidth="224.40001831054684" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="553.6000061035156" minWidth="10.0" prefWidth="223.00004882812493" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="625.1999877929687" minWidth="10.0" prefWidth="250.60006713867188" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="553.6000061035156" minWidth="10.0" prefWidth="247.60001220703123" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints />
